commit order update and bug product